Animation overflow fix

--- a/src/app/body/body.component.scss
+++ b/src/app/body/body.component.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  overflow: hidden;
 
   pointer-events: none;
   user-select: none;
